--- a/part1/ordo_ressource.tex
+++ b/part1/ordo_ressource.tex
@@ -218,7 +218,7 @@ de chaque activité $i\in \A$ de telle sorte que:
 Le \RCPSP~est un problème qui a été prouvé NP-complet au sens
 fort~\cite{NP_RCPSP}. Ce problème a donc été très étudié dans la
 littérature, notamment pour trouver des méthodes efficaces pour sa
-résolution. Dans la section~\ref{section_modele_RCPSP}, nous présentons des
+résolution. Dans la section~\ref{sec:PLNE_ordo_res}, nous présentons des
 modèles de programmation linéaire permettant de trouver la solution
 optimale à ce problème. 
 
@@ -355,6 +355,6 @@ suite du manuscrit.
   \end{figure}
 \end{ex}
 
-Dans la section~\ref{section_etat_CUSP}, nous présenterons des
+Dans la section~\ref{sec:etat_CUSP}, nous présenterons des
 méthodes de résolution pour ce problème utilisant la programmation par
 contrainte. 
