--- a/part2/CECSP/ER_filter.tex
+++ b/part2/CECSP/ER_filter.tex
@@ -3,4 +3,5 @@
 
 \subsection{Test de satisfiabilité}
 \subsection{Les ajustements de borne}
+\label{sec:adjustment_tw}
 \subsection{Caractérisation des intervalles d'intérêt}
