--- a/part3/CECSP/conclusion.tex
+++ b/part3/CECSP/conclusion.tex
@@ -1,4 +1,4 @@
-\section{Conclusion}
+\chapter*{Conclusion}
 
 Dans ce chapitre, nous avons présenté des modèles de programmation
 linéaire en nombres entiers pour le problème du \RCPSP~ et pour le
