Part PLNE avant P apres C

--- a/main_file.tex
+++ b/main_file.tex
@@ -1,5 +1,4 @@
-
-\documentclass[11pt,a4paper]{book}
+\documentclass[11pt,a4paper,svgnames]{book}
 
 
 \input{usepackage.tex}
@@ -47,7 +46,7 @@
 \input{part1/chap1.tex}
 \input{part2/PPC.tex}
 \input{part3/PLNE.tex}
-% \input{modele_MILP/modele_these.tex}
+\input{part4/expe.tex}
 
 \printindex
 
