--- a/part3/CECSP/conclusion.tex
+++ b/part3/CECSP/conclusion.tex
@@ -17,4 +17,4 @@ améliorations.
 Des résultats numériques évaluant les performances de ces formulations
 ainsi que l'intérêt de chaque amélioration sur diverses instances du
 \CECSP~et du \RCPSP~feront l'objet d'un paragraphe dans le chapitre
-portant sur les expérimentations (cf. Chapitre~\ref{chapitre_expe}). 
+portant sur les expérimentations (cf. Chapitre~\ref{sec:expe}). 
