--- a/part3/CECSP/modele_CECSP.tex
+++ b/part3/CECSP/modele_CECSP.tex
@@ -1,11 +1,11 @@
 %!TeX root =../main_file.tex
-\section{Modèles de programmation linéaire en nombres entiers pour le
+\section{Modèles de programmation linéaire mixte pour le
 \CECSP}
 
 Le \CECSP ~et le \RCPSP~étant deux problèmes relativement proches -
 utilisation d'une ou plusieurs ressources cumulatives, de fenêtres de
 temps - la modélisation du \CECSP~à l'aide de la programmation
-linéaire en nombres entiers est une approche naturelle pour
+linéaire mixte est une approche naturelle pour
 sa résolution. 
 
 De plus, le théorème~\ref{theo_LPM_CECSP} nous assurant que toute solution
