--- a/part3/RCPSP/PLNE_RCPSP.tex
+++ b/part3/RCPSP/PLNE_RCPSP.tex
@@ -1,4 +1,4 @@
-\chapter{Programmation linéaire en nombres entiers et ordonnancement
+\chapter{Programmation linéaire et ordonnancement
   de projet}
 
 \input{part3/RCPSP/PL.tex}
