--- a/part1/chap1.tex
+++ b/part1/chap1.tex
@@ -1,7 +1,7 @@
 
 \part{Introduction}
 
-\chapter{Ordonnancement sous contraintes de ressource}
+\chapter{Ordonnancement, ressource et énergie}
 
 \input{part1/ordo.tex}
 \input{part1/ordo_ressource.tex}
