--- a/part1/ordo_ressource.tex
+++ b/part1/ordo_ressource.tex
@@ -1,5 +1,10 @@
 
-\section{L'ordonnancement sous contraintes de ressource}\subsection{Problèmes cumulatifs}
+\section{Contraintes de ressource et contraintes }
+
+Dans ce manuscrit, nous sommes principalement intéressé aux problèmes
+d'ordonnancement cumulatifs. Parmi ces derni
+
+\subsection{Problèmes cumulatifs}
 \subsubsection{Le problème d'ordonnancement  de projet à contraintes de
   ressources}
 \index{\RCPSPidx}
